--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,206 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+  line-height: 1;
+  font-size: 1.6rem;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+:root {
+  font-size: 62.5%;
+}
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 0.1rem;
+    margin-bottom: 1.5rem;
+}
+
+* {
+  box-sizing: border-box;
+}
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.container {
+  max-width: 1024px;
+	margin: 0 auto;
+}
+
+header, header nav, section, main {
+	display: flex;
+	max-width: 100%;
+	align-content: center;
+}
+
+section {
+  margin: 2rem 1rem;
+  justify-content: space-between;
+}
+
+.stack {
+	flex-direction: column;
+}
+
+/* Header portion styling */
+header nav {
+	justify-content: space-between;
+	padding: 2rem 0.5rem;
+	margin-bottom: 5rem;
+}
+
+header nav ul, header nav ul li {
+	display: flex;
+	text-align: center;
+}
+
+header nav ul {
+  width: 70%;
+  align-self: center;
+  justify-content: space-between;
+	align-items: center
+}
+
+li a {
+	text-decoration: none;
+	color: #cccccc;
+	text-align: inherit;
+}
+
+li a:hover {
+	color: #000000;
+}
+
+.active {
+	color: #666666
+}
+
+nav > a {
+  display: flex;
+  align-self: center;
+	width: 20%;
+}
+
+.logo {
+	display: flex;
+	max-width: 100%;
+}
+
+header .header-container {
+	align-items: center;
+	justify-content: space-between;
+}
+
+header .header-container .item {
+  align-self: center;
+	display: flex;
+	flex-direction: column;
+	max-width: 48%;
+	width: 48%;
+	align-items: center;
+  justify-content: center;
+}
+
+header .header-container .item h1 {
+	text-align: center;
+	font-size: 3.4rem;
+}
+
+header .header-container .item button {
+	margin: 0 25% 5rem 25%;
+	width: 50%;
+	border: 1px solid black;
+	border-radius: 0;
+	padding: 1rem 0;
+	font-size: 1.6rem;
+  cursor: pointer;
+  background-color: white;
+}
+
+header .header-container .header-img {
+	background: url('../img/header-img.png') no-repeat;
+	width: 48%;
+  height: 40rem;
+}
+
+/* Main portion styling */
+main section .upper-text-container {
+	width: 49%;
+}
+
+.banner {
+	display: block;
+  width: 98%;
+  padding: 0 1%;
+}
+
+main section .lower-text-container {
+	width: 32%;
+}
+
+/* Footer portion styling */
+footer {
+	margin: 4rem 0 2rem 1rem;
+}
+
+.copyright {
+	display: block;
+	margin: 10rem 0;
+	text-align: center;
+}
